# PurPle-Pi-R1

./: .gitignore  README.md  Release_to_customer.sh
boot/: .config  release_to_alkaid.sh  u-boot.lds  u-boot.srec
boot/arch/arm/: Kconfig
boot/common/: autoboot.c  board_r.c  cmd_bootlogo.c  cmd_customer_init_xiangfan.c  cmd_customer_init_xiangfan_20210509.c  cmd_mstar.c  cmd_osd.c  env_common.c  env_nand.c  env_sf.c  usb.c
boot/configs/: infinity2m_spinand_burnmac_defconfig
boot/drivers/mstar/: Kconfig
boot/examples/standalone/: hello_world  hello_world.srec
boot/include/: autoconf.mk  autoconf.mk.dep  config.h  environment.h  ms_version.h
boot/include/config/: auto.conf
boot/include/configs/: .infinity2m.h.swp  infinity2m.h
boot/lib/: asm-offsets.s
boot/scripts/basic/: fixdep
boot/scripts/kconfig/: conf  mconf
boot/tools/: dumpimage  envcrc  gen_eth_addr  mkenvimage  mkimage  proftool
boot/tools/common/: env_embedded.c
boot/tools/env/: fw_env.h
kernel/: Makefile
kernel/drivers/mtd/: Kconfig  mtdpart.c
kernel/drivers/sstar/: Kconfig  Makefile
kernel/include/config/: auto.conf  kernel.release  tristate.conf
kernel/init/: main.c
kernel/kernel/: bounds.s
kernel/lib/: gen_crc32table
kernel/modules/: modules.list
kernel/scripts/: .gitignore  conmakehash  kallsyms  sortextable
kernel/scripts/basic/: fixdep
kernel/scripts/dtc/: dtc
kernel/scripts/kconfig/: conf  mconf
kernel/scripts/mod/: .modpost.o.cmd  devicetable-offsets.h  devicetable-offsets.s  mk_elfconfig  modpost
kernel/scripts/sstar/: .cscope.mk  .cscope.sh
project/: make_emmc_upgrade_sigmastar.sh  make_sd_upgrade_sigmastar.sh  make_usb_upgrade_sigmastar.sh  makefile  setup_config.sh  split_partion.sh
project/board/audioCfg/: audioCfg.txt
project/board/ini/: pq.ini
project/board/ini_no_pqpatch/: pq.ini
project/configs/: current.configs
project/image/: boot.mk  image.mk  makefile  ota.mk
project/image/etc/: profile
project/image/rootfs_add_files/: app_music
project/kbuild/4.9.84/: .config  Makefile  arch  drivers  include  kbuild.mk  release.sh  scripts
project/release/customer_options/: 011a.201_options.mk  257c.256_options.mk  268c.256_options.mk
project/release/customer_tailor/: dvr_default.mk  dvr_i2_uclibc_tailor.mk  ipc_default.mk  ipc_i5_glibc_tailor.mk  ipc_i6_h2_tailor.mk  ipc_i6_rtos_tailor.mk  ipc_i6_tailor.mk  ipc_i6b0_tailor.mk  ipc_i6e_tailor.mk  nvr_default.mk  nvr_i2_glibc_tailor.mk  nvr_i2m_display_fastboot_glibc_tailor.mk  nvr_i2m_display_glibc_tailor.mk  nvr_i2m_display_uclibc_tailor.mk  nvr_i2m_glibc_tailor.mk  nvr_i2m_uclibc_tailor.mk  nvr_k6_uclibc_tailor.mk  nvr_k6l_glibc_tailor.mk  perf_test.mk  usb_cam_default.mk  usb_cam_i2_uclibc_tailor.mk  usbcam_default.mk  usbcam_i6_tailor.mk
project/tools/apitool/: M5_isp_api_4_3.xml  M5_isp_api_4_4.xml  M5_isp_api_4_5.xml  Macaron_isp_api.xml  Pretzel_isp_api.xml  Pudding_isp_api.xml  Twinkie_isp_api.xml
sdk/verify/application/: app.mk
sdk/verify/application/logo/: Makefile  README.md  conf.sh  config.h  config.h.in  configure  configure.ac  logo.c  logo.h
sdk/verify/application/logo/bmp/: bmp.c  bmp.h
sdk/verify/application/logo/jpeg/: jpeg.c  jpeg.h
sdk/verify/application/logo/png/: mypng.c  mypng.h
sdk/verify/application/logo/raw/: raw.c  raw.h
sdk/verify/application/logo/sstardisp/: sstardisp.c  sstardisp.h
toolchain/: install_toolchain.sh
tools/: Tftpd32.rar  ssd201_ISP_5.0.15.rar
(+3485 files in other folders)
